force-app/main/default/objects/Test_heroku__c/fields/Fields_3_APIs__c.field-meta.xml
<CustomField>
    <fullName>Fields_3_APIs__c</fullName>
    <label>Fields 3 APIs</label>
    <type>TextArea</type>
</CustomField>