force-app/main/default/objects/Test_heroku__c/fields/Filter_Condition_1__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition_1__c</fullName>
    <label>Filter Condition 1</label>
    <type>TextArea</type>
</CustomField>