force-app/main/default/objects/Test_heroku__c/fields/Filter_Condition_5__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition_5__c</fullName>
    <label>Filter Condition 5</label>
    <type>TextArea</type>
</CustomField>