force-app/main/default/objects/Test_heroku__c/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <type>TextArea</type>
</CustomField>