force-app/main/default/objects/Test_heroku__c/fields/Object_1_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_1_API_Name__c</fullName>
    <label>Object 1 API Name</label>
    <type>TextArea</type>
</CustomField>