force-app/main/default/objects/Test_heroku__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API</label>
    <type>TextArea</type>
</CustomField>