force-app/main/default/objects/Test_heroku__c/fields/Runs_on__c.field-meta.xml
<CustomField>
    <fullName>Runs_on__c</fullName>
    <label>Runs on</label>
    <type>TextArea</type>
</CustomField>