force-app/main/default/objects/Test_heroku__c/fields/Starts_At__c.field-meta.xml
<CustomField>
    <fullName>Starts_At__c</fullName>
    <label>Starts At</label>
    <type>TextArea</type>
</CustomField>