force-app/main/default/objects/Test_heroku__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_APIs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>